[package]
name = "rusty-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for processing and computation"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
colored = "2.1"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
rayon = "1.8"
